[gd_scene load_steps=2 format=3 uid="uid://bwkxq5yitdt3m"]

[ext_resource type="Script" path="res://addons/object_creator/Scripts/UI-Scripts/navigator.gd" id="1_a5urb"]

[node name="Navigator" type="Control"]
layout_mode = 3
anchor_left = 0.7
anchor_top = 0.8
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_a5urb")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(8.3278e-05, 0.0409506, 0.178493, 0.5)

[node name="UIControl" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="UIControl"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.05
anchor_right = 0.5
anchor_bottom = 0.05
grow_horizontal = 2
text = "Navigator"

[node name="ButtonBox" type="VBoxContainer" parent="UIControl"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.3
anchor_right = 0.95
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="BackButton" type="Button" parent="UIControl/ButtonBox"]
layout_mode = 2
text = "Back"

[node name="ResetButton" type="Button" parent="UIControl/ButtonBox"]
layout_mode = 2
text = "Reset"

[node name="ConfirmationBox" type="VBoxContainer" parent="UIControl"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.3
anchor_right = 0.95
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="ConfirmButton" type="Button" parent="UIControl/ConfirmationBox"]
layout_mode = 2
text = "Confirm"

[node name="CancelButton" type="Button" parent="UIControl/ConfirmationBox"]
layout_mode = 2
text = "Cancel"
